--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Hypergate PlayStore fixer",
+  "name": "Hypergate Managed GooglePlay Chrome Extension",
   "version": "1.0.0",
   "manifest_version": 2,
-  "description": "Helps if Hypergate is not showing up in your managed GooglePlay store search.",
+  "description": "Helps you adding Hypergate to your managed Google Play account in case it's not showing up in the search",
   "homepage_url": "https://hypergate.com",
   "icons": {
     "128": "icons/icon128.png"
